# gbav2

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  _typos.toml
apps/gba-cli/: Cargo.toml
apps/gba-cli/src/: main.rs
apps/gba-cli/src/commands/: display.rs  init.rs  mod.rs  plan.rs  run.rs
apps/gba-cli/src/tui/: app.rs  event.rs  mod.rs  ui.rs
crates/gba-core/: Cargo.toml
crates/gba-core/src/: config.rs  engine.rs  error.rs  event.rs  git.rs  lib.rs  plan.rs  preset.rs  reviewer.rs  runner.rs  session.rs  verifier.rs  workspace.rs
crates/gba-pm/: Cargo.toml
crates/gba-pm/src/: context.rs  error.rs  lib.rs  manager.rs  prompt_id.rs
crates/gba-pm/src/templates/: init_analyze.jinja  init_claude_md.jinja  init_gba_md.jinja  init_system.jinja  plan_design_spec.jinja  plan_system.jinja  plan_verification.jinja  run_phase.jinja  run_review.jinja  run_system.jinja  run_verify.jinja
crates/gba-pm/templates/: init_analyze.jinja  init_claude_md.jinja  init_gba_md.jinja  init_system.jinja  plan_design_spec.jinja  plan_system.jinja  plan_verification.jinja  run_phase.jinja  run_review.jinja  run_system.jinja  run_verify.jinja
specs/: README.md  develop-process.md  gba-design.md  institution.md  instruction.md
