[workspace]
members = ["crates/*", "apps/*"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Your Name <YourName@yourdomain.com>"]
repository = "https://github.com/TODO"
homepage = "https://github.com/TODO"

[workspace.dependencies]
# Internal crates
gba-core = { path = "crates/gba-core" }
gba-pm = { path = "crates/gba-pm" }

# Async runtime
tokio = { version = "1.49.0", features = ["rt", "rt-multi-thread", "macros", "signal"] }

# Error handling
anyhow = "1.0.98"
thiserror = "2.0.18"

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

# CLI
clap = { version = "4.5.60", features = ["derive"] }

# TUI
ratatui = "0.30.0"

# Template engine
minijinja = "2.16.0"

# Claude Agent SDK
claude-agent-sdk-rs = "0.6.4"

# Logging & Observability
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }
