[package]
name = "gba-cli"
description = "GBA command line interface"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "gba"
path = "src/main.rs"

[dependencies]
gba-core = { workspace = true }
gba-pm = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
crossterm = "0.29"
futures = { workspace = true }
ratatui = { workspace = true }
ratatui-textarea = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
