[package]
name = "gba-core"
description = "Core execute engine for GBA CLI"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
gba-pm = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
tokio = { workspace = true }
claude-agent-sdk-rs = { workspace = true }
tracing = { workspace = true }
futures = "0.3"
async-stream = "0.3"

[dev-dependencies]
tempfile = "3"
