[package]
name = "gba-pm"
description = "Prompt manager for GBA CLI"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
minijinja = { workspace = true }
tracing = { workspace = true }
